[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-rest-framework-missedcall"
version = "2.0.0"
description = "Production-grade flash-call authentication for Django REST Framework."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "tabaro", email = "contact@tabaro.io"}
]
keywords = [
    "django",
    "rest-framework",
    "authentication",
    "missed-call",
    "flash-call",
    "twilio",
    "phone-verification",
    "otp-alternative"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Communications :: Telephony",
]
dependencies = [
    "django>=3.2",
    "djangorestframework>=3.12",
    "twilio>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "coverage>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
    "pre-commit>=3.0",
]
redis = [
    "redis>=4.5",
    "django-redis>=5.2",
]
postgres = [
    "psycopg2-binary>=2.9",
]
full = [
    "redis>=4.5",
    "django-redis>=5.2",
    "psycopg2-binary>=2.9",
]

[project.urls]
"Documentation" = "https://github.com/tabaro/django-rest-framework-missedcall#readme"
"Bug Tracker" = "https://github.com/tabaro/django-rest-framework-missedcall/issues"
"Homepage" = "https://github.com/tabaro/django-rest-framework-missedcall"
"Source Code" = "https://github.com/tabaro/django-rest-framework-missedcall"
"Changelog" = "https://github.com/tabaro/django-rest-framework-missedcall/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["drf_missed_call_auth"]
include-package-data = true

[tool.setuptools.package-data]
"drf_missed_call_auth" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip = ["migrations"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["migrations"]

[tool.coverage.run]
source = ["drf_missed_call_auth"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
testpaths = ["tests"]